# actually-good-music-player

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  actually_good_module.h  agmp.make  album_art.cpp  album_art.h  app.cpp  app.h  art_render.cpp  art_render.h  browser.cpp  browser.h  build.bat  canvas.cpp  canvas.h  compile_commands.json  config.cpp  config.h  config.toml  draw.cpp  draw.h  event.cpp  event.h  http.cpp  http.h  input.cpp  input.h  logging.cpp  logging.h  main.cpp  map.h  metadata.cpp  metadata.h  net.cpp  net.h  particles.cpp  particles.h  (+17 more)
.cache/clangd/index/: main.cpp.FD76EFDF599F5281.idx  miniaudio.h.85046AE5FF9E43A4.idx  player.c.2894146214141C42.idx  player.h.952388308BE8865D.idx
bin-int/Debug/: main.d  player.d
